--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ r<!DOCTYPE html>
                         Objetivos del curso:<br>
 			    
                        En la actualidad la tecnología avanzan cada día generando más riesgo y vulnerabilidades para las grandes empresas hasta un computador personal  por lo que se requiere la 
-		       implementación de niveles de seguridad que permitan mayor confiabilidad, integridad y privacidad de la información. Por lo que se capacitara al estudiante en 
-		       los aspectos más relevantes para el desarrollo de sus habilidades para encontrar las vulnerabilidades en la infraestructura informática.<br>
-		       <br>
+
+		                   implementación de niveles de seguridad que permitan mayor confiabilidad, integridad y privacidad de la información. Por lo que se capacitara al estudiante en 
+		                   los aspectos más relevantes para el desarrollo de sus habilidades para encontrar las vulnerabilidades en la infraestructura informática.<br> <br>
 			    Con este curso les permitirá a los estudiantes:<br>
 			    
 			    * Conocer el marco conceptual de la seguridad informática, sus políticas y procedimientos de gestión de riesgos ante vulnerabilidades de la infraestructura informática.<br>
@@ -102,25 +102,32 @@ r<!DOCTYPE html>
                 <div id="apDiv5">
                 <div id="apDiv11">Nuestra UNAD</div>
                 </div>
-                <div id="apDiv6"><span style="text-align: justify;">
-                <iframe src='js/slider.html' width='260' height='180' frameborder='0'></iframe>    
-                </span>
-      			</div>
+
+                   <div id="apDiv6"><span style="text-align: justify;">
+                   <iframe src='js/slider.html' width='260' height='180' frameborder='0'></iframe>    
+                   </span>
+      			       </div>
+
               	<div id="apDiv7">
                 <div id="apDiv12">Ubicación Sede Nacional</div>
-      			</div>
-      			<div id="apDiv8"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15908.191419159031!2d-74.0975768!3d4.5854329!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc1c38a35fe03bf87!2sUNAD+UNIVERSIDAD+NACIONAL+ABIERTA+Sede+Jos%C3%A9+Celestino+Mutis!5e0!3m2!1ses!2sco!4v1475599261440" width="260" height="180" frameborder="0" style="border:0" allowfullscreen></iframe></div>
-              <div id="apDiv15"></div>
-              <div id="apDiv16">Nuestra ECBTI</div>
+      			    </div>
+
+      		    	<div id="apDiv8"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15908.191419159031!2d-74.0975768!3d4.5854329!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc1c38a35fe03bf87!2sUNAD+UNIVERSIDAD+NACIONAL+ABIERTA+Sede+Jos%C3%A9+Celestino+Mutis!5e0!3m2!1ses!2sco!4v1475599261440" width="260" height="180" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+                <div id="apDiv15"></div>
+                <div id="apDiv16">Nuestra ECBTI</div>
+
       <div id="apDiv18"><iframe width="260" height="180" src="https://www.youtube.com/embed/Z-rfSPH3ZQA" frameborder="0" allowfullscreen></iframe></div>
     	</aside>
+
 		<Footer>
           <div id="apDiv25">Para uso de la Universidad Nacional Abierta y a Distancia UNAD</div>
           <div id="apDiv26">Elaborado por el grupo 301122_2, estudiantes del curso de diseño web </div>
 		  <div id="apDiv13"><img src="img/logoUNADgrisInferior.png" width="225" height="41"></div>
 		  <div id="apDiv27">CEAD Facatativa - 2016</div>
     	</Footer>
+
    </body>
+   
     <script src="js/modernizr.js"></script>   
     <script src="js/prefixfree.min.js"></script>
     <script src="js/jquery-2.1.1.js"></script>   
