--- a/multimedia.html
+++ b/multimedia.html
@@ -69,7 +69,7 @@
 	<section2>
 		<h2>CONTENIDO MULTIMEDIA DEL CURSO SEGURIDAD INFORMÁTICA</h2>
 		<div>Audio de Seguridad Informática</div> 
-		<audio id="sonido" src="audio/Estandares_SG.mp3" controls>
+		<audio id="sonido" src="audio/audio.mp3" controls>
 		</audio>
 		<div>Video Seguridad Informática 1</div>
 		<div><iframe width="720" height="480" src="https://www.youtube.com/embed/70W35yo7Bgw" frameborder="0" allowfullscreen></iframe>
