--- a/autores.html
+++ b/autores.html
@@ -15,8 +15,8 @@
     <body>	
         <Div id="contenidos">
             <header>
-                <div id="apDiv1"><img src="img/banner.jpg" width="1000" height="168">
-                <div id="apDiv24">OVA Para curso Seguridad Informática - Tecnología en Desarrollo de Software</div>
+                <div id="apDiv1"><img src="img/SEG1.jpg" width="800" height="168">
+                  <div id="apDiv24">OVA Para curso Diseño de Sitios Web - Seguridad Informatica</div>
               </div>
             </header>
         	<p>&nbsp;</p>
