--- a/autores.html
+++ b/autores.html
@@ -76,6 +76,7 @@
 			<br>Skype: gisel.lopez40</br>
 			<br>Correo electronico:	gisel017@gmail.com</br>
 			</p>
+	</article>
         		<h2>FERNANDO ARNOVY</h2>
         		<figure>
                         <img src="img/f1.png" alt="FERNANDO ARNOVY">
