--- a/autores.html
+++ b/autores.html
@@ -2,7 +2,7 @@
 <html lang="es" class"no-js">
     <!-- PAGINA DE INCIO DE MENU  -->
     <head>
- 		<meta charset="UTF-8">
+ 	<meta charset="UTF-8">
         <meta content="YURY GISEL LOPEZ FERNANDO ARNOVY SANCHEZ, WILSON CASTAÑEDA, JAYSON LEYTON, RUBEN MAURY" name="author"/>
         <meta content="OVA CURSO DE SEGURIDAD INFORMATICA" name="description" />
         <meta content="Inicio, Lecturas, Multimedia, Actividades, Autores," name="keywords" />
@@ -71,9 +71,9 @@
                         <img src="img/y1.png" alt="GISEL LOPEZ">
                   	</figure>
         		<p>Datos personales:
-			<br>Codigo: 1070952769</br>
-			<br>Programa inscrita: Ingenieria de Sistemas</br>
-			<br>Skype: gisel.lopez40</br>
+			<br>Codigo: 1070952769
+			<br>Programa inscrita: Ingenieria de Sistemas
+			<br>Skype: gisel.lopez40
 			<br>Correo electronico:	gisel017@gmail.com</br>
 			</p>
 	</article>
