--- a/autores.html
+++ b/autores.html
@@ -71,10 +71,10 @@
                         <img src="img/y1.png" alt="GISEL LOPEZ">
                   	</figure>
         		<p>Datos personales:
-			<br>Codigo: 1070952769
-			<br>Programa inscrita: Ingenieria de Sistemas
-			<br>Skype: gisel.lopez40
-			<br>Correo electronico:	gisel017@gmail.com</br>
+			• Codigo: 1070952769
+			• Programa inscrita: Ingenieria de Sistemas
+			• Skype: gisel.lopez40
+			• Correo electronico: gisel017@gmail.com
 			</p>
 	</article>
         		<h2>FERNANDO ARNOVY</h2>
