--- a/autores.html
+++ b/autores.html
@@ -70,11 +70,11 @@
                     <figure>
                         <img src="img/y1.png" alt="GISEL LOPEZ">
                   	</figure>
-        		<p>Datos personales:
-			<br>• Codigo: 1070952769</br>
-			<br>• Programa inscrita: Ingenieria de Sistemas</br>
-			<br>• Skype: gisel.lopez40</br>
-			<br>• Correo electronico: gisel017@gmail.com</br>
+        		<p>Datos personales:<br>
+				• Codigo: 1070952769</br>
+				<br>• Programa inscrita: Ingenieria de Sistemas</br>
+				<br>• Skype: gisel.lopez40</br>
+				<br>• Correo electronico: gisel017@gmail.com</br>
 			</p>
 	</article>
         		<h2>FERNANDO ARNOVY</h2>
