--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-r<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es" class="no-js">
     <!-- comentario  -->
     <head>
- 		<meta charset="UTF-8">
+ 	<meta charset="UTF-8">
         <meta content="mauricio perdomo" name="author"/>
         <meta content="Pagina de curso de Seguridad Informatica" name="description" />
         <meta content="EDUCACION, UNAD, INGENIERIA, SISTEMAS, DISENO, OVA, CURSO, WEB" name="keywords" />
