--- a/autores.html
+++ b/autores.html
@@ -66,21 +66,26 @@
 		<h2>Autores del sitio para Seguridad Informática</h2>
 		<div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
-                <h2>GISEL LOPEZ</h2>
-                    <figure>
+                	<h2>Gisel Lopez</h2>
+                    	<figure>
                         <img src="img/y1.png" alt="GISEL LOPEZ">
                   	</figure>
         		<p>Datos personales:<br>
 				• Codigo: 1070952769<br>
-				• Programa inscrita: Ingenieria de Sistemas<br>
+				• Programa: Ingenieria de Sistemas<br>
 				• Skype: gisel.lopez40<br>
 				• Correo electronico: gisel017@gmail.com<br>
 			</p>
-	</article>
-        		<h2>FERNANDO ARNOVY</h2>
+        		<h2>Fernando Sánchez</h2>
         		<figure>
                         <img src="img/f1.png" alt="FERNANDO ARNOVY">
                   	</figure>
+			<p>Datos personales:<br>
+				• Codigo: 1070959068<br>
+				• Programa: Ingenieria de Sistemas<br>
+				• Skype: fernando.sanchez901<br>
+				• Correo electronico: fer.a.sanchez.d@hotmail.com<br>
+			</p>
                   <h2>WILSON CASTAÑEDA</h2>
         		<figure>
                         <img src="img/w1.png" alt="FERNANDO ARNOVY">
