--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
-                        <img src="img/diseno_web.jpg" alt="Diseno">
+                        <img src="img/Seguridad-Informatica.jpg" alt="Seguridad Informatica">
                   	</figure>
                     <p>
                         Objetivos del curso:<br>
