--- a/autores.html
+++ b/autores.html
@@ -86,25 +86,18 @@
 				• Skype: fernando.sanchez901<br>
 				• Correo electronico: fer.a.sanchez.d@hotmail.com<br>
 			</p>
-                  <h2>WILSON CASTAÑEDA</h2>
+			<h2>Wilson Castañeda</h2>
         		<figure>
-                        <img src="img/w1.png" alt="FERNANDO ARNOVY">
+                        <img src="img/w1.png" alt="Wilson Castañeda">
                   	</figure>
-        <p> Datos........
-        Codigo:				1070945086
-        Programa inscrito:	Ingenieria de Sistemas
-        Skype:				alejandro_castaneda1
-        Correo electronico:	chikial@gmail.com
-        </p>
-        <img src="img/w1.png" alt="Wilson Castañeda">
-        <meta content="JAYSON LEYTON" name="author"/>
-        <img src="img/j1.png" alt="Jayson Layton">
-        <meta content="RUBEN MAURY" name="author"/>
-        <img src="img/r1.png" alt="Ruben Maury">
-                        Propósitos del curso:<br>
-                        • Desarrolar los conocimientos adquiridos en el manejo de GITHUB a travez del desarrolo de un OVA Institucional.<br>
-                        • Conocer los beneficios otrogados por la programacion de HTML5 y CS3 a travez de GITHUB.<br>
-                      
+			<p>Datos personales:<br>
+				• Codigo: 1070945086<br>
+				• Programa: Ingenieria de Sistemas<br>
+				• Skype: alejandro_castaneda1<br>
+				• Correo electronico: chikial@gmail.com<br>
+			</p>
+			<img src="img/j1.png" alt="Jayson Layton">
+			<img src="img/r1.png" alt="Ruben Maury">
                     </p>
       			</article>
     </section>
