--- a/autores.html
+++ b/autores.html
@@ -96,9 +96,26 @@
 				• Skype: alejandro_castaneda1<br>
 				• Correo electronico: chikial@gmail.com<br>
 			</p>
+			<h2>Jayson Layton</h2>
+			<figure>
 			<img src="img/j1.png" alt="Jayson Layton">
+			</figure>
+			<p>Datos personales:
+				• Codigo: <br>
+				• Programa: <br>
+				• Skype: <br>
+				• Correo electronico: <br>
+			</p>
+			<h2>Ruben Maury</h2>
+			<figure>
 			<img src="img/r1.png" alt="Ruben Maury">
-                    </p>
+			</figure>
+			<p>Datos personales:
+				• Codigo: <br>
+				• Programa: <br>
+				• Skype: <br>
+				• Correo electronico: <br>
+                    	</p>
       			</article>
     </section>
     <aside> 
