--- a/autores.html
+++ b/autores.html
@@ -100,7 +100,7 @@
 			<figure>
 			<img src="img/j1.png" alt="Jayson Layton">
 			</figure>
-			<p>Datos personales:
+			<p>Datos personales:<br>
 				• Codigo: <br>
 				• Programa: <br>
 				• Skype: <br>
@@ -110,7 +110,7 @@
 			<figure>
 			<img src="img/r1.png" alt="Ruben Maury">
 			</figure>
-			<p>Datos personales:
+			<p>Datos personales:<br>
 				• Codigo: <br>
 				• Programa: <br>
 				• Skype: <br>
