--- a/multimedia.html
+++ b/multimedia.html
@@ -66,7 +66,7 @@
 	</nav>
 	<div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>				
 	</div>
-	<section>
+	<section2>
 		<h2>CONTENIDO MULTIMEDIA DEL CURSO SEGURIDAD INFORMÁTICA</h2>
 		<div>Audio de Seguridad Informática</div> 
 		<audio id="sonido" src="audio/audio.mp3" controls>
@@ -77,7 +77,7 @@
 		<div>Video Seguridad Informática 2</div>
 		<div><iframe width="720" height="480" src="https://www.youtube.com/embed/015X7BgAYdo" frameborder="0" allowfullscreen></iframe>
 		</div>
-	</section>
+	</section2>
 	<Footer>
           <div id="apDiv25">Para uso de la Universidad Nacional Abierta y a Distancia UNAD</div>
           <div id="apDiv26">Elaborado por: Luis Fernando Jaramillo Hernández, estudiante del programa Ing. de Sistemas </div>
