--- a/multimedia.html
+++ b/multimedia.html
@@ -68,7 +68,7 @@
 	</div>
 	<section2>
 		<h2>CONTENIDO MULTIMEDIA DEL CURSO SEGURIDAD INFORMÁTICA</h2>
-		<div>Audio de Seguridad Informática</div> 
+		<div>Audio Estandares de Seguridad Informática</div> 
 		<audio id="sonido" src="audio/Estandares_SG.mp3" controls>
 		</audio>
 		<div>Video Seguridad Informática 1</div>
