--- a/actividades.html
+++ b/actividades.html
@@ -12,7 +12,7 @@
         <link href='http://fonts.googleapis.com/css?family=arial' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
      </head>
-    <body>	
+    <body >	
         <Div id="contenidos">
             <header>
                 <div id="apDiv1"><img src="img/banner.jpg" width="1000" height="168">
@@ -67,8 +67,10 @@
                 </div>
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
-    <section>
-  
+    <section >
+    <header id="act1">
+      <img src="img/seg-inf.jpg" alt="logo">
+    </header>
     <header id="act2">
       <article>
         <p id="pact2">---------------------------------------------------------------------------------------------------------
@@ -78,27 +80,37 @@
       </article>
       </header>
 
+      <header id="act7">
+        <img src="img/actividades.jpg" alt="actividades">
+      </header>
+
       <header id="act3">
 
-       <p id="pcon1">Control Informatico:<a href="OVA-curso-seguridad-inform-tica/descargas/actividad1/actividad1.pdf" download="guia de actividades 1">  descargar guia.pdf</a></p>   
-       <p id="pcon2">Control Informatico:<a color"white" href="OVA-curso-seguridad-inform-tica/descargas/actividad1/actividad1.docx" download="guia de actividades 1">  descargar guia.docx</a></p>   
+       <p id="pcon1">Control Informatico:<a href="OVA-curso-seguridad-inform-tica/descargas/act1/actividad1.pdf" download="guia de actividades 1">  descargar guia.pdf</a></p>   
+       <p id="pcon2">Control Informatico:<a href="OVA-curso-seguridad-inform-tica/descargas/act1/actividad1.docx" download="guia de actividades 1">  descargar guia.docx</a></p>   
 
       </header>
 
       <header id="act4">
-         <p id="pcon3">Riesgos Informaticos:<a href="OVA-curso-seguridad-inform-tica/descargas/actividad2/actividad2.pdf" download="guia de actividades 1">  descargar guia.pdf</a></p>   
-         <p id="pcon4">Riesgos Informaticos:<a href="OVA-curso-seguridad-inform-tica/descargas/actividad2/actividad2.docx" download="guia de actividades 1">  descargar guia.docx</a></p> 
+         <p id="pcon3">Riesgos Informaticos:<a href="OVA-curso-seguridad-inform-tica/descargas/act2/actividad2.pdf" download="guia de actividades 1">  descargar guia.pdf</a></p>   
+         <p id="pcon4">Riesgos Informaticos:<a href="OVA-curso-seguridad-inform-tica/descargas/act2/actividad2.docx" download="guia de actividades 1">  descargar guia.docx</a></p> 
         
       </header>
 
        <header id="act5">
-         <p id="pcon5">Proyecto Final:<a href="OVA-curso-seguridad-inform-tica/descargas/proyectofinal/proyectofinal.pdf" download="guia de actividades 1">  descargar guia.pdf</a></p>   
-       <p id="pcon6">Proyecto Final:<a href="OVA-curso-seguridad-inform-tica/descargas/proyecofinal/proyectofinal.docx" download="guia de actividades 1">  descargar guia.docx</a></p> 
+         <p id="pcon5">Proyecto Final:<a href="OVA-curso-seguridad-inform-tica/descargas/pfinal/proyectofinal.pdf" download="guia de actividades 1">  descargar guia.pdf</a></p>   
+       <p id="pcon6">Proyecto Final:<a href="OVA-curso-seguridad-inform-tica/descargas/pfinal/proyectofinal.docx" download="guia de actividades 1">  descargar guia.docx</a></p> 
         
       </header>
+
+<header id="sec6">
+  <img src="img/aestudiar.png" alt="estudiar">
+</header>
+
+
     </section>
   
-    <aside> 
+    <aside > 
                 <div id="apDiv5">
                 <div id="apDiv11">Nuestra UNAD</div>
                 </div>
@@ -119,7 +131,7 @@
           <div id="apDiv25">Para uso de la Universidad Nacional Abierta y a Distancia UNAD</div>
           <div id="apDiv26">Elaborado por el grupo 301122_2, estudiantes del curso de diseño web </div>
 		  <div id="apDiv13"><img src="img/logoUNADgrisInferior.png" width="225" height="41"></div>
-		  <div id="apDiv27">CEAD Facatativa - 2016</div>
+		  <div id="apDiv27">UNAD-2016</div>
     	</Footer>
 
    </body>
