--- a/autores.html
+++ b/autores.html
@@ -27,7 +27,14 @@
                 <li><a href="index.html" class="menu">Inicio</a></li>
                 <li><a href="lecturas.html" class="menu">Lecturas</a></li>
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
-                <li><a href="actividades.html" class="menu">Actividades</a></li>
+                <li><a href="actividades.html" class="menu">Actividades</a>
+                  <ul>
+                        <li><a href="actividades.html" class="menu">Guias de Actividades</a></li> 
+                        <li><a href="sub2actividades.html" class="menu">Problemas eticos de la seguridad informatica</a></li>
+                        <li><a href="sub3actividades.html" class="menu">Terminologia informatica</a></li>
+                 </ul>
+
+                </li>
                 <li><a href="autores.html" class="menu">Autores</a></li>
       
                 <div id="apDiv19">
@@ -65,6 +72,7 @@
     	<section>
 		<h2>Autores del sitio para Seguridad Informática</h2>
 		<div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
+  
                 <article>
                 	<h2>Gisel Lopez</h2>
                     	<figure>
@@ -111,10 +119,10 @@
 			<img src="img/r1.png" alt="Ruben Maury">
 			</figure>
 			<p>Datos personales:<br>
-				• Codigo: <br>
-				• Programa: <br>
-				• Skype: <br>
-				• Correo electronico: <br>
+				• Codigo: 1043872357<br>
+				• Programa:Ingenieria de Sistemas <br>
+				• Skype:ruben maury<br>
+				• Correo electronico:yn.ruben@gmail.com <br>
                     	</p>
       			</article>
     </section>
@@ -136,9 +144,9 @@
     	</aside>
 		<Footer>
           <div id="apDiv25">Para uso de la Universidad Nacional Abierta y a Distancia UNAD</div>
-          <div id="apDiv26">Elaborado por: Yury Gisel Lopez, Fernando Arnovy, Wilson Alejandro Castañeda </div>
+          <div id="apDiv26">Elaborado por el grupo 301122_2, estudiantes del curso de diseño web </div>
 		  <div id="apDiv13"><img src="img/logoUNADgrisInferior.png" width="225" height="41"></div>
-		  <div id="apDiv27">Universidad Nacional Abierta y a Distancia UNAD - 2016</div>
+		  <div id="apDiv27">UNAD - 2016</div>
     	</Footer>
    </body>
     <script src="js/modernizr.js"></script>   
