--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
                 <li><a href="index.html" class="menu">Inicio</a></li>
                 <li><a href="lecturas.html" class="menu">Lecturas</a></li>
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
-                <li><a href="actividades.html" class="menu">Actividades</a></li>
+                <li><a href="actividades.html" class="menu">Actividades</a>
+                  <ul>
+                        <li><a href="actividades.html" class="menu">Guias de Actividades</a></li> 
+                        <li><a href="sub2actividades.html" class="menu">Problemas eticos de la seguridad informatica</a></li>
+                        <li><a href="sub3actividades.html" class="menu">Terminologia informatica</a></li>
+                 </ul>
+
+                </li>
                 <li><a href="autores.html" class="menu">Autores</a></li>
                 <div id="apDiv19">
                 <center>
@@ -106,9 +113,9 @@
     	</aside>
 		<Footer>
           <div id="apDiv25">Para uso de la Universidad Nacional Abierta y a Distancia UNAD</div>
-          <div id="apDiv26">Elaborado por: Luis Fernando Jaramillo Hernández, estudiante del programa Ing. de Sistemas </div>
+          <div id="apDiv26">Elaborado por el grupo 301122_2, estudiantes del curso de diseño web</div>
 		  <div id="apDiv13"><img src="img/logoUNADgrisInferior.png" width="225" height="41"></div>
-		  <div id="apDiv27">CEAD Dosquebradas - 2016</div>
+		  <div id="apDiv27">UNAD- 2016</div>
     	</Footer>
    </body>
     <script src="js/modernizr.js"></script>   
