--- a/autores.html
+++ b/autores.html
@@ -104,15 +104,15 @@
 				• Skype: alejandro_castaneda1<br>
 				• Correo electronico: chikial@gmail.com<br>
 			</p>
-			<h2>Jayson Layton</h2>
+			<h2>Jayson Leyton</h2>
 			<figure>
-			<img src="img/j1.png" alt="Jayson Layton">
+			<img src="img/j1.png" alt="Jayson Leyton">
 			</figure>
 			<p>Datos personales:<br>
-				• Codigo: <br>
-				• Programa: <br>
-				• Skype: <br>
-				• Correo electronico: <br>
+				• Codigo: 1.070.951.785<br>
+				• Programa:Ingenieria de Sistemas <br>
+				• Skype: andresleyton1988<br>
+				• Correo electronico:jaysonleyton1@gmail.com <br>
 			</p>
 			<h2>Ruben Maury</h2>
 			<figure>
