--- a/autores.html
+++ b/autores.html
@@ -79,7 +79,7 @@
                         <img src="img/y1.png" alt="GISEL LOPEZ">
                   	</figure>
         		<p>Datos personales:<br>
-				• Codigo: 1070952769<br>
+				• Codigo: 1.070.952.769<br>
 				• Programa: Ingenieria de Sistemas<br>
 				• Skype: gisel.lopez40<br>
 				• Correo electronico: gisel017@gmail.com<br>
