--- a/autores.html
+++ b/autores.html
@@ -89,7 +89,7 @@
                         <img src="img/f1.png" alt="FERNANDO ARNOVY">
                   	</figure>
 			<p>Datos personales:<br>
-				• Codigo: 1070959068<br>
+				• Codigo: 1.070.959.068<br>
 				• Programa: Ingenieria de Sistemas<br>
 				• Skype: fernando.sanchez901<br>
 				• Correo electronico: fer.a.sanchez.d@hotmail.com<br>
