--- a/autores.html
+++ b/autores.html
@@ -99,7 +99,7 @@
                         <img src="img/w1.png" alt="Wilson Castañeda">
                   	</figure>
 			<p>Datos personales:<br>
-				• Codigo: 1070945086<br>
+				• Codigo: 1.070.945.086<br>
 				• Programa: Ingenieria de Sistemas<br>
 				• Skype: alejandro_castaneda1<br>
 				• Correo electronico: chikial@gmail.com<br>
