--- a/autores.html
+++ b/autores.html
@@ -119,9 +119,9 @@
 			<img src="img/r1.png" alt="Ruben Maury">
 			</figure>
 			<p>Datos personales:<br>
-				• Codigo: 1043872357<br>
+				• Codigo: 1.043.872.357<br>
 				• Programa: Ingenieria de Sistemas <br>
-				• Skype:ruben maury<br>
+				• Skype: ruben maury<br>
 				• Correo electronico:yn.ruben@gmail.com <br>
                     	</p>
       			</article>
