--- a/autores.html
+++ b/autores.html
@@ -78,7 +78,7 @@
                     	<figure>
                         <img src="img/y1.png" alt="GISEL LOPEZ">
                   	</figure>
-			<p><B>Datos personales:</B><br>
+			<p><u>Datos personales:</u><br><br>
 				• Codigo: 1.070.952.769<br>
 				• Programa: Ingenieria de Sistemas<br>
 				• Skype: gisel.lopez40<br>
