--- a/autores.html
+++ b/autores.html
@@ -88,7 +88,7 @@
         		<figure>
                         <img src="img/f1.png" alt="FERNANDO ARNOVY">
                   	</figure>
-			<p>Datos personales:<br>
+			<p><u>Datos personales:</u><br><br>
 				• Codigo: 1.070.959.068<br>
 				• Programa: Ingenieria de Sistemas<br>
 				• Skype: fernando.sanchez901<br>
