--- a/autores.html
+++ b/autores.html
@@ -98,7 +98,7 @@
         		<figure>
                         <img src="img/w1.png" alt="Wilson Castañeda">
                   	</figure>
-			<p>Datos personales:<br>
+			<p><u>Datos personales:</u><br><br>
 				• Codigo: 1.070.945.086<br>
 				• Programa: Ingenieria de Sistemas<br>
 				• Skype: alejandro_castaneda1<br>
