--- a/autores.html
+++ b/autores.html
@@ -108,7 +108,7 @@
 			<figure>
 			<img src="img/j1.png" alt="Jayson Leyton">
 			</figure>
-			<p>Datos personales:<br>
+			<p><u>Datos personales:</u><br><br>
 				• Codigo: 1.070.951.785<br>
 				• Programa: Ingenieria de Sistemas <br>
 				• Skype: andresleyton1988<br>
