--- a/autores.html
+++ b/autores.html
@@ -118,7 +118,7 @@
 			<figure>
 			<img src="img/r1.png" alt="Ruben Maury">
 			</figure>
-			<p>Datos personales:<br>
+			<p><u>Datos personales:</u><br><br>
 				• Codigo: 1.043.872.357<br>
 				• Programa: Ingenieria de Sistemas <br>
 				• Skype: ruben maury<br>
