--- a/lecturas.html
+++ b/lecturas.html
@@ -23,12 +23,20 @@
    			<p>&nbsp;</p>
             <p>&nbsp;</p>
     		<nav>
-              <ul class="menu">
+               <ul class="menu">
                 <li><a href="index.html" class="menu">Inicio</a></li>
-                <li><a href="lecturas.html" class="menu">Lecturas</a></li>
+                <li><a href="lecturas.html" class="menu">Lecturas</a>
+                <ul>
+                    <li><a href="lec1.html" class="menu">Lectura 1</a></li>
+                    <li><a href="lec2.html" class="menu">Lectura 2</a></li>
+                    <li><a href="lec2.html" class="menu">Lectura 3</a></li>
+                </ul>
+                </li>
+
+
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
-                  <ul>
+                 <ul>
                         <li><a href="actividades.html" class="menu">Guias de Actividades</a></li> 
                         <li><a href="sub2actividades.html" class="menu">Problemas eticos de la seguridad informatica</a></li>
                         <li><a href="sub3actividades.html" class="menu">Terminologia informatica</a></li>
@@ -70,35 +78,16 @@
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
     <section>
-    <h2> CONTENIDOS </h2>
+    <h2>Diseño de Sitios Web - UNAD ECBTI</h2>
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
-                        <img src="img/seguridad.jpg" alt="seguridad">
+                        <img src="img/diseno_web.jpg" alt="Diseno">
                   	</figure>
-	          
-            <br>
-            <br>
-	          <p>
-		           <dt><b>   INTRODUCCIÓN </b></dt>
-	          </p>
-
-<p>
-La seguridad informática es la encargada de diseñar las normas, procedimientos y técnicas, para asegurar la integridad, disponibilidad y privacidad 
-de la información en un sistema informático e intentar reducir las amenazas que se pueden encontrar. Encontramos dos tipos de seguridad: La seguridad 
-lógica que se enfoca en la protección de los contenidos y su información y la seguridad física aplicada a los equipos.<br>
-<br>
-En la actualidad la seguridad de la información es de suma importancia para las empresas y para las personas  ya que con los avances tecnológicos han permitido 
-el crecimiento de las vulnerabilidades de virus, hackers entre otros y con la implementación de un sistema de seguridad permitirá minimizar las vulnerabilidades de los sistemas y de la información contenida en ellos, así como de las redes privadas y sus recursos.<br>
-	
-
-               </p>
-			<br>
-
-<div id="apDiv28"><a href="CONTENIDO 1.html" class="_blank"><img src="img/Flecha-siguiente.jpg" style="float:rithg" class="menu" title="siguiente" 
-				border="0" /></a></div>
-			</article>
-	
+                    <p>
+                        
+                    </p>
+      			</article>
     </section>
     <aside> 
                 <div id="apDiv5">
@@ -120,7 +109,7 @@ el crecimiento de las vulnerabilidades de virus, hackers entre otros y con la im
           <div id="apDiv25">Para uso de la Universidad Nacional Abierta y a Distancia UNAD</div>
           <div id="apDiv26">Elaborado por el grupo 301122_2, estudiantes del curso de diseño web </div>
 		  <div id="apDiv13"><img src="img/logoUNADgrisInferior.png" width="225" height="41"></div>
-		  <div id="apDiv27">CEAD Facatativa - 2016</div>
+		  <div id="apDiv27">UNAD-2016</div>
     	</Footer>
    </body>
     <script src="js/modernizr.js"></script>   
