--- a/autores.html
+++ b/autores.html
@@ -78,7 +78,7 @@
                     	<figure>
                         <img src="img/y1.png" alt="GISEL LOPEZ">
                   	</figure>
-			<p><u>Datos personales:</u><br><br>
+			<p><u>Datos personales:</u><br>
 				• Codigo: 1.070.952.769<br>
 				• Programa: Ingenieria de Sistemas<br>
 				• Skype: gisel.lopez40<br>
@@ -88,7 +88,7 @@
         		<figure>
                         <img src="img/f1.png" alt="FERNANDO ARNOVY">
                   	</figure>
-			<p><u>Datos personales:</u><br><br>
+			<p><u>Datos personales:</u><br>
 				• Codigo: 1.070.959.068<br>
 				• Programa: Ingenieria de Sistemas<br>
 				• Skype: fernando.sanchez901<br>
@@ -98,7 +98,7 @@
         		<figure>
                         <img src="img/w1.png" alt="Wilson Castañeda">
                   	</figure>
-			<p><u>Datos personales:</u><br><br>
+			<p><u>Datos personales:</u><br>
 				• Codigo: 1.070.945.086<br>
 				• Programa: Ingenieria de Sistemas<br>
 				• Skype: alejandro_castaneda1<br>
@@ -118,7 +118,7 @@
 			<figure>
 			<img src="img/r1.png" alt="Ruben Maury">
 			</figure>
-			<p><u>Datos personales:</u><br><br>
+			<p><u>Datos personales:</u><br>
 				• Codigo: 1.043.872.357<br>
 				• Programa: Ingenieria de Sistemas <br>
 				• Skype: ruben maury<br>
